# template-agents-rust

./: Cargo.toml  README.md
src/: envs.rs
src/agents/: mod.rs
src/agents/orchestrator/: mod.rs
src/agents/specialized/: mod.rs
src/agents/specialized/address/: mod.rs
src/agents/specialized/damage/: mod.rs
src/agents/specialized/dummy/: mod.rs
