[package]
name = "service"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Async Runtime & HTTP
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0"
tower-http = { version = "0", features = [
    "trace",
    "cors",
    "timeout",
    "limit",
    "compression-gzip",
] }

# AI & LLM Framework
rig-core = { version = "0.29", features = ["derive"] }

# Serialization & Validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Observability & Telemetry
tracing = "0.1"
tracing-stackdriver = { version = "0.10.0", features = ["opentelemetry"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-gcloud-trace = "0.22.0"
opentelemetry-semantic-conventions = "0.31"

# Error Handling
anyhow = "1.0"
thiserror = "2"

# Database & Infrastructure
redis = { version = "1", features = ["tokio-comp"] }
dotenv = "0.15.0"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
